# Cardiac.AI

./: .dockerignore  Dockerfile  Guide.txt  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
app/: __init__.py  routes.py  routes_test.py
app/services/: prediction_service.py
app/static/css/: style.css  test.css
app/static/js/: index.js  test.js
app/templates/: home.html  index.html  test.html
test_data/: Test_Heart_Risk_Data_V09 (1).csv
