[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-risk-ml"
version = "0.1.0"
description = "Intelligent heart disease risk prediction system with LLM-based clinical explanation"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
